--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,14 @@
     margin: auto;
     background-color: rgba(0, 0, 0, 0.4);
 }
+
+.lign_s {
+    width: 75%;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#nav_h:hover {
+    background-color: #000;
+    color: #fff;
+}
