--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,15 @@ body header {
     color: #fff;
 }
 
+header {
+}
+
+.banniere{
+    height: 300px;
+    background: no-repeat center center / cover url("../img/Background\ header.jpg") fixed;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.527);
+}  
+
 main {
     margin-top: 50px;
 }
