--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,700;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap');
-@import url("https://fonts.googleapis.com/css?family=Oswald|Roboto:400,700");
+@import url("https://fonts.googleapis.com/css?family=Oswald|Roboto:300,400,700");
 
 body {
-    font-family: Nunito;
+    font-family: Ubuntu;
 }
 
 body h1 {
@@ -106,4 +106,9 @@ main article {
        -o-border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0)) 1 100%;
           border-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0))) 1 100%;
           border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0)) 1 100%;
+}
+
+#formations h3{
+    font-family: Oswald, sans-serif;
+    font-weight: 300;
 }
