--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,6 @@ body header {
     font-family: Ubuntu, sans-serif;
 }
 
-.fancy-border {
-  border: 25px solid #B88846;
-  border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
-}
 .lign {
     width: 100%;
     margin: auto;
@@ -115,4 +111,9 @@ main article {
 #formations h3{
     font-family: Oswald, sans-serif;
     font-weight: 300;
+}
+
+.bk_r {
+  background-color: #992e2e;
+  color: #fff;
 }
