--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,30 @@ body header {
   color: #000;
 }
 
-.banniere{
+.no_pad {
+  padding: 0;
+}
+
+.banniere {
     height: 300px;
-    background: no-repeat center center / cover url("../img/Background\ header.jpg") fixed;
+    background: no-repeat center center / cover url("../img/Background_header.jpg") fixed;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.527);
 }  
+
+.banniere_for {
+  height: 400px;
+  background: no-repeat center center / cover url("../img/formation.jpg") fixed;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.527);
+  margin: 30px 0;
+  color: #fff;
+}
+
+.banniere_for h1 {
+  margin-top: 30px;
+  padding: 10px 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 3px;
+}
 
 main {
     margin-top: 50px;
