création skills + changement img
On ajoute des progrss bar pour les skills une nouvelle image de fond pour formations et les mentions légal

--- a/css/style.css
+++ b/css/style.css
@@ -69,15 +69,21 @@ body header {
   height: 400px;
   background: no-repeat center center / cover url("../img/formation.jpg") fixed;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.527);
-  margin: 30px 0;
+  margin-top: 30px;
   color: #fff;
 }
 
 .banniere_for h1 {
   margin-top: 30px;
   padding: 10px 10px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.55);
   border-radius: 3px;
+}
+
+.progress {
+  margin: 30px 20px;
+  height: 30px;
+  font-size: medium;
 }
 
 main {
@@ -142,7 +148,28 @@ main article {
     font-weight: 300;
 }
 
+#skills {
+  margin-top: 0;
+}
+
+#skills h1 {
+  margin-top: 30px;
+}
+
 .bk_r {
   background-color: #992e2e;
   color: #fff;
+}
+
+.br_b {
+  background-color: #495057;
+  color: #fff;
+}
+
+.nm {
+  margin-bottom: 0;
+}
+
+.footer {
+  padding-top: 20px;
 }
