--- a/css/style.css
+++ b/css/style.css
@@ -40,19 +40,24 @@ body header {
     border-radius: 20px;
 }
 
+#nav_h {
+  transition: .3s;
+}
+
 #nav_h:hover {
-    background-color: #2d2f31;
+    background-color: #992e2e;
     color: #fff;
 }
 
 #push_ta {
   background-color: #2d2f31;
   color: #fff;
+  transition: .3s;
 }
 
 #push_ta:hover {
-  background-color: #fff;
-  color: #000;
+  background-color: #992e2e;
+  color: #fff;
 }
 
 .no_pad {
@@ -81,7 +86,7 @@ body header {
 }
 
 .progress {
-  margin: 30px 20px;
+  width: 300px;
   height: 30px;
   font-size: medium;
 }
@@ -168,6 +173,15 @@ main article {
 
 .nm {
   margin-bottom: 0;
+}
+
+.nmt {
+  margin-top: 0;
+}
+
+.competence p{
+  margin: 20px 10px;
+  width: 100px;
 }
 
 .footer {
