--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body header {
   width: 300px;
   height: 30px;
   font-size: medium;
+  border-radius: 0px;
 }
 
 main {
@@ -182,6 +183,10 @@ main article {
 .competence p{
   margin: 20px 10px;
   width: 100px;
+}
+
+.beauti-text p{
+  font-size: x-large;
 }
 
 .footer {
