--- a/projet/css/style.css
+++ b/projet/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @font-face {
   font-family: 'Acherus Grotesque';
   src: url('../fonts/Horizon\ Type\ -\ AcherusGrotesque-Regular.eot');
